set up css file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 </head>
 
 <body>
-    <h1>Java Script Quiz</h1>
+    <header>
+        <h1>Java Script Quiz</h1>
+        <div class = "timer"> 
+            <h1>Timer</h1>
+        </div>
+    </header>
+    
     <div class="quiz-container">
         <div id="quiz"></div>
     </div>
