--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
     <div class="container">
         <div class="card">
-            <div id="form" class="card-body">
-
+            <div id="form" class="card-body" >
+                <h2 id="introText">Click here to start quiz</h2>
 
             </div>
         </div>
