--- a/instructions/gameOver.html
+++ b/instructions/gameOver.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practice Quiz</title>
+    <title>Game Over!</title>
     <link rel="stylesheet" href="assets/css/style.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,46 +14,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-
-
-
 </head>
 
 <body>
-    <header>
-        <h1>Java Script Quiz</h1>
-        <div id="timer" class="timer">
-            <h1>Timer</h1>
-        </div>
-    </header>
-
-    <div class="container">
-        <div class="card">
-            <div id="form" class="card-body">
-                <h2 id="introText">Click here to start quiz</h2>
-
-            </div>
-        </div>
-    </div>
-    <div class="row justify-content-center">
-        <div id="btn" class="col-2">
-            <button type="button" class="btn btn-primary" id="start">Start Quiz</button>
-        </div>
-
-    </div>
-
-
-
-
-
-    <div id="results"></div>
 
 
     <script src="assets/js/script.js"></script>
+
 </body>
 
 </html>
-
-<!-- <button id="previous">Previous Question</button>
-<button id="next">Next Question</button>
-<button id="submit">Submit Quiz</button> -->
