displayed timer and will now subtract when question wrong

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
         <h1>Java Script Quiz</h1>
         <div id="timer" class="timer">
-            <h1>Timer</h1>
+            <h1>Timer <span id="countdown"></span></h1>
         </div>
     </header>
 
