displayed scores and initials

--- a/index.html
+++ b/index.html
@@ -46,7 +46,13 @@
 
 
 
-    <div id="results"></div>
+
+    <div class="container" >
+        <p>HighScores</p>
+        <div id="results">
+           
+        </div>
+    </div>
 
 
     <script src="assets/js/script.js"></script>
